--- a/FAQ.html
+++ b/FAQ.html
@@ -37,7 +37,7 @@
 </header>
 <main class="spaces_main_FAQ">
     <div class="spaces_headerFAQ">
-    <img src="Images/FAQ.jpg" alt="zoomed inn on a lady with labcoat and facemask looking into a microskope" >
+    <img src="Images/FAQ.jpg" alt="Green C with three borromean rings around it" >
     <h1> FAQ</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
