--- a/Index.html
+++ b/Index.html
@@ -56,12 +56,12 @@
             </div>
             <div class="Image_link">
                 <a href="-kids.html">
-                <img src="Images/kids.jpg" alt="Picture of a child reading a book whith spaceships in the background">
+                <img src="Images/kids.jpg" alt="Picture of a boy with glasses, looking through a looking glass and working on burning metal on a tecknical board ">
                 <h2> For kids</h2></a>
             </div>
             <div class="Image_link">
                 <a href="-teachers.html">
-                <img src="Images/Teacher1.jpg" alt=" Lady writing on blackboard with her back turned">
+                <img src="Images/Teacher1.jpg" alt=" Lady standing in front of a blackboard with arms crossed">
                 <h2> For teachers</h2></a>
             </div>
             <div class="Image_link"><a href="-Researchers.html">
@@ -124,11 +124,11 @@
             <h2>Internships</h2></a>
             </div>
             <div class="Image_link"> <a href="shop.html">
-                <img src="Images/Shop.jpg" alt="picture of many wires conected together and forming a big ball, seen from underneeth">
+                <img src="Images/Shop.jpg" alt="wooden toy dinosaurs on top of books">
             <h2> Shop</h2></a>
             </div>
             <div class="Image_link"><a href="FAQ.html">
-                <img src="Images/FAQ.jpg" alt=" Green keyhole with three borromean rings around it">
+                <img src="Images/FAQ.jpg" alt=" Green C with three borromean rings around it">
                 <h2> FAQ</h2></a>
             </div></div>
         </section>
