--- a/shop.html
+++ b/shop.html
@@ -37,7 +37,7 @@
 </header>
 <main class="spaces_main">
     <div class="spaces_header2">
-    <img src="Images/Shop.jpg" alt="zoomed inn on a lady with labcoat and facemask looking into a microskope" >
+    <img src="Images/Shop.jpg" alt="zoomed inn on wooden toy dinosaurs on top of books" >
     <h1> Shop</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
@@ -48,7 +48,7 @@
      All proceeds from the shop support the museum's exhibits and educational programs. 
       </p>
     <ul class="spaces_images">
-    <img src="Images/Shop1.jpg" alt="wooden toy dinosaurs on top of books">
+    <img src="Images/Shop1.jpg" alt="a plastic toy spaseship with NASA written on it">
     <img src="Images/Shop3.jpg" alt=" who girls playing with a teddy dinosaur and a teddy whale">
     <img src="Images/Shop2.jpg" alt="zoomed in on a fidgit toy in metal, held by a girl">
     </ul>
