--- a/-teachers.html
+++ b/-teachers.html
@@ -37,7 +37,7 @@
 </header>
 <main class="spaces_main_teachers">
     <div class="spaces_header2">
-    <img src="Images/Teacher1.jpg" alt="zoomed inn on a teacher infront of a blackboard">
+    <img src="Images/Teacher1.jpg" alt="zoomed inn on  Lady standing in front of a blackboard with arms crossed">
     <h1> For Teachers</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
