--- a/-Researchers.html
+++ b/-Researchers.html
@@ -38,7 +38,7 @@
 <main class="spaces_main">
     <div class="spaces_header2">
     <img src="Images/research.jpg" alt="zoomed inn on a man and lady in labcoats in a labratory with a microscope infront of them">
-    <h1> For researchers</h1></div>
+    <h1 class="Headline3"> For researchers</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
     <h3>Are you a researcher? </h3>
