--- a/-teachers.html
+++ b/-teachers.html
@@ -38,7 +38,7 @@
 <main class="spaces_main_teachers">
     <div class="spaces_header2">
     <img src="Images/Teacher1.jpg" alt="zoomed inn on  Lady standing in front of a blackboard with arms crossed">
-    <h1> For Teachers</h1></div>
+    <h1 class="Headline2"> For Teachers</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
     <h3>Are you a teacher looking to teach about science? </h3>
