updated nav list
Every page have correct nav list now

--- a/-Ecology.html
+++ b/-Ecology.html
@@ -21,19 +21,18 @@
       <li><a href="Visit.html">Visit</a></li>
       <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
       <li> <a href="special_events.html"> Special events</a></li>
-   <div >
-    <li class="hide_list"> <a href="#">For kids</a> </li>
-    <li class="hide_list"> <a href="#">For teachers</a> </li>
-    <li class="hide_list"> <a href="#">For Researchers</a> </li>
-    <li class="hide_list"> <a href="#">Support us</a> </li>
-    <li class="hide_list"> <a href="#">Volenteer</a> </li>
-    <li class="hide_list"> <a href="#">Internship</a> </li>
-    <li class="hide_list"> <a href="#">Shop</a> </li>
-    <li class="hide_list"> <a href="#">FAQ</a> </li>
-    <li class="hide_list"> <a href="#">Keep in touch</a> </li>
-    <li class="hide_list"> <a href="#">Contact us</a> </li>
-            </div>   </ul>
-  </nav>
+      <div >
+        <li class="hide_list"> <a href="-kids.html">For kids</a> </li>
+        <li class="hide_list"> <a href="-teachers.html">For teachers</a> </li>
+        <li class="hide_list"> <a href="-Researchers.html">For Researchers</a> </li>
+        <li class="hide_list"> <a href="support.html">Support us</a> </li>
+        <li class="hide_list"> <a href="volunteer.html">Volenteer</a> </li>
+        <li class="hide_list"> <a href="internship.html">Internship</a> </li>
+        <li class="hide_list"> <a href="shop.html">Shop</a> </li>
+        <li class="hide_list"> <a href="FAQ.html">FAQ</a> </li>
+                </div>   
+            </ul>
+      </nav>
 </header>
 <main class="spaces_ecology_main">
     <div class="spaces_header2">
