--- a/-kids.html
+++ b/-kids.html
@@ -21,24 +21,23 @@
       <li><a href="Visit.html">Visit</a></li>
       <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
       <li> <a href="special_events.html"> Special events</a></li>
-   <div >
-    <li class="hide_list"> <a href="#">For kids</a> </li>
-    <li class="hide_list"> <a href="#">For teachers</a> </li>
-    <li class="hide_list"> <a href="#">For Researchers</a> </li>
-    <li class="hide_list"> <a href="#">Support us</a> </li>
-    <li class="hide_list"> <a href="#">Volenteer</a> </li>
-    <li class="hide_list"> <a href="#">Internship</a> </li>
-    <li class="hide_list"> <a href="#">Shop</a> </li>
-    <li class="hide_list"> <a href="#">FAQ</a> </li>
-    <li class="hide_list"> <a href="#">Keep in touch</a> </li>
-    <li class="hide_list"> <a href="#">Contact us</a> </li>
-            </div>   </ul>
-  </nav>
+      <div >
+        <li class="hide_list"> <a href="-kids.html">For kids</a> </li>
+        <li class="hide_list"> <a href="-teachers.html">For teachers</a> </li>
+        <li class="hide_list"> <a href="-Researchers.html">For Researchers</a> </li>
+        <li class="hide_list"> <a href="support.html">Support us</a> </li>
+        <li class="hide_list"> <a href="volunteer.html">Volenteer</a> </li>
+        <li class="hide_list"> <a href="internship.html">Internship</a> </li>
+        <li class="hide_list"> <a href="shop.html">Shop</a> </li>
+        <li class="hide_list"> <a href="FAQ.html">FAQ</a> </li>
+                </div>   
+            </ul>
+      </nav>
 </header>
 <main class="spaces_main_kids">
     <div class="spaces_header2">
     <img src="Images/kids.jpg" alt="zoomed inn on Picture of a boy with glasses, looking through a looking glass and working on burning metal on a tecknical board">
-    <h1 class="Headline"> For Kids</h1></div>
+    <h1 class="Headline2"> For Kids</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
     <h3>Are you a young person looking to learn more about science? </h3>
