--- a/Index.html
+++ b/Index.html
@@ -31,12 +31,10 @@
     <li class="hide_list"> <a href="-teachers.html">For teachers</a> </li>
     <li class="hide_list"> <a href="-Researchers.html">For Researchers</a> </li>
     <li class="hide_list"> <a href="support.html">Support us</a> </li>
-    <li class="hide_list"> <a href="#">Volenteer</a> </li>
-    <li class="hide_list"> <a href="#">Internship</a> </li>
-    <li class="hide_list"> <a href="#">Shop</a> </li>
-    <li class="hide_list"> <a href="#">FAQ</a> </li>
-    <li class="hide_list"> <a href="#">Keep in touch</a> </li>
-    <li class="hide_list"> <a href="#">Contact us</a> </li>
+    <li class="hide_list"> <a href="volunteer.html">Volenteer</a> </li>
+    <li class="hide_list"> <a href="internship.html">Internship</a> </li>
+    <li class="hide_list"> <a href="shop.html">Shop</a> </li>
+    <li class="hide_list"> <a href="FAQ.html">FAQ</a> </li>
             </div>   </ul>
   </nav>
 </header>
