--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="Images with links to the different exhibition spaces">
+    <meta name="description" Images with links to the different exhibition spaces>
     <title>CSM|Exhibition_Spaces</title>
     <link href="Css/style.css" rel="stylesheet">
     <link href="Css/index.css" rel="stylesheet">
@@ -22,19 +22,18 @@
       <li><a href="Visit.html">Visit</a></li>
       <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
       <li> <a href="special_events.html"> Special events</a></li>
-   <div >
-    <li class="hide_list"> <a href="#">For kids</a> </li>
-    <li class="hide_list"> <a href="#">For teachers</a> </li>
-    <li class="hide_list"> <a href="#">For Researchers</a> </li>
-    <li class="hide_list"> <a href="#">Support us</a> </li>
-    <li class="hide_list"> <a href="#">Volenteer</a> </li>
-    <li class="hide_list"> <a href="#">Internship</a> </li>
-    <li class="hide_list"> <a href="#">Shop</a> </li>
-    <li class="hide_list"> <a href="#">FAQ</a> </li>
-    <li class="hide_list"> <a href="#">Keep in touch</a> </li>
-    <li class="hide_list"> <a href="#">Contact us</a> </li>
-            </div>   </ul>
-  </nav>
+      <div >
+        <li class="hide_list"> <a href="-kids.html">For kids</a> </li>
+        <li class="hide_list"> <a href="-teachers.html">For teachers</a> </li>
+        <li class="hide_list"> <a href="-Researchers.html">For Researchers</a> </li>
+        <li class="hide_list"> <a href="support.html">Support us</a> </li>
+        <li class="hide_list"> <a href="volunteer.html">Volenteer</a> </li>
+        <li class="hide_list"> <a href="internship.html">Internship</a> </li>
+        <li class="hide_list"> <a href="shop.html">Shop</a> </li>
+        <li class="hide_list"> <a href="FAQ.html">FAQ</a> </li>
+                </div>   
+            </ul>
+      </nav>
 </header>
 <main>
     <div class="exhibition_headline"> 
