FAQ and Description fixed
Typo fixed
FAQ added answers

--- a/FAQ.html
+++ b/FAQ.html
@@ -39,21 +39,37 @@
     <img src="Images/FAQ.jpg" alt="Green C with three borromean rings around it" >
     <h1> FAQ</h1></div>
 <section class="spaces_info">
-    <div class="spaces_infotext">
-    <h3>  Frequently asked questions about the science museum: </h3>
-       <ul>
-    
-      <li><a href="#"> 1. What are the museum's hours of operation?</a> </li>
-      <li><a href="#"> 2. How much does it cost to visit the museum?</a> </li>
-      <li> <a href="#"> 3. Do you offer discounts for students or groups?</a> </li>
-      <li> <a href="#">   4. What exhibits are currently on display?</a> </li>
-      <li> <a href="#">   5. Do you offer guided tours of the museum?</a> </li>
-      <li><a href="#">   6. Is the museum accessible for people with disabilities?</a> </li>
-      <li> <a href="#">   7. What age groups is the museum best suited for?</a> </li>
-      <li> <a href="#">    8. Can I bring food and drinks into the museum?</a> </li>
-      <li> <a href="#">    9. Is photography allowed in the museum?</a> </li>
-      <li> <a href="#"> 10. How do I get to the museum by public transportation?</a> </li>
-     </ul>
+    <div class="spaces_infotext_faq">
+    <h2>  Frequently asked questions about the science museum: </h2>
+   <h3> Q: What are the museum's hours of operation?</h3>
+<h4>A: The museum is open from 10:00am to 4:00pm, tuesday, Wednesday,Thursday. 
+    Fridays we are open from 10:00am to 7:00 pm, saturdays 9:00am to 4:00pm,sunday from 9:00 to 1pm. We are closed on mondays.</h4>
+
+<h3>Q: Is there a fee for admission?</h3>
+<h4>A: no, The entrance is free for all. there is a fee of 70NOK for guided tours</h4>
+<h3>Q: Is there a gift shop?</h3>
+<h4>A: Yes, there is a gift shop located near the museum entrance. We offer a variety of science-related toys, books, and souvenirs.</h4>
+
+<h3>Q: Is food allowed in the museum?</h3>
+<h4>A: No, food and drinks are not allowed in the museum galleries. 
+However, we do have a designated eating area where visitors can enjoy snacks or meals.</h4>
+
+<h3>Q: Is the museum accessible for visitors with disabilities?</h3>
+<h4>A: Yes, the museum is fully accessible for visitors with disabilities. We offer wheelchair rentals, 
+as well as audio guides and braille labels for exhibits.</h4>
+
+<h3>Q: Are strollers allowed in the museum?</h3>
+<h4>A: Yes, strollers are permitted in the museum galleries. However, we ask that visitors be mindful of other guests and exhibit spaces.</h4>
+
+<h3>Q: Is there parking available?</h3>
+<h4>A: Yes, there is a parking lot located adjacent to the museum. Parking is free for museum visitors.</h4>
+
+<h3>Q: Are there guided tours available?</h3>
+<h4>A: Yes, we offer guided tours of the museum for groups of 6 or more. Please contact us to schedule a tour in advance.</h4>
+
+<h3>Q: Are there any special events or exhibits coming up?</h3>
+<h4>A: Yes, we have a rotating schedule of special exhibits and events throughout the year. 
+Please check "spescial events" for the latest information.</h4>
       
     <ul class="spaces_images">
     <img src="Images/FAQ1.jpg" alt="cartoon lady infront of desk with science glass with red and green liquid">
