--- a/-Cosmology.html
+++ b/-Cosmology.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" info about the exhibition space: Cosmology>
+    <meta name="description" information about the exhibition space: Cosmology>
     <title>CSM|Cosmology </title>
     <link href="Css/style.css" rel="stylesheet">
 <link href="Css/spaces.css" rel="stylesheet">
