--- a/-teachers.html
+++ b/-teachers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" info about the museum for teachers and that they can take their class to visit>
+    <meta name="description" information about the museum for teachers and that they can take their class to visit>
     <title>CSM|For Teachers </title>
     <link href="Css/style.css" rel="stylesheet">
 <link href="Css/spaces.css" rel="stylesheet">
