Logo fixed and deleted

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="Index.html"><img src="/Images/Logo---.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
+        <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
         <label for="menu_checkbox" class="menu_hamburger"><i class="fa-solid fa-bars"></i> Menu</label>    
           <input type="checkbox" id="menu_checkbox">
         <nav class="header_menu"> 
